Fix for mobile new thread form missing some spacing.

--- a/assets/css/arcadia.less
+++ b/assets/css/arcadia.less
@@ -254,7 +254,7 @@ body.modal-open #wrapper {
   left: 0;
 }
 
-#user-nav .badge {
+.badge-red {
   background-color: #d9534f;
 }
 
@@ -306,6 +306,27 @@ body.modal-open #wrapper {
   .messages-dropdown .list-wrapper {
     max-height: 400px;
   }
+}
+
+.nav-pills.small > li > a {
+  padding: 5px 15px;
+  color: #555;
+}
+
+.nav-pills.small > li > a:hover {
+  background-color: #fafafa;
+  color: #555;
+}
+
+.nav-pills.small > li.active > a,
+.nav-pills.small > li.active > a:hover,
+.nav-pills.small > li.active > a:focus {
+  background-color: #f0f0f0;
+  color: #555;
+}
+
+.nav-pills.small .active .badge {
+  color: #555;
 }
 
 .message-teaser .date {
